[package]
edition = "2021"
name = "pallet-math"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-runtime = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27"}

[dev-dependencies]

[features]
default = ["std"]
std = ["sp-runtime/std"]
