[package]
edition = "2021"
name = "pallet-proposal"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
]}
collective-types = {default-features = false, version = "0.1.0", path = "../system-types/collective"}
frame-support = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
frame-system = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
num-traits = {version = "0.2.15", default-features = false}
pallet-math = {path = "../math", default-features = false}
proposal-types = {version = "0.1.0", default-features = false, path = "../system-types/proposal"}
scale-info = {version = "2.1.1", default-features = false, features = ["derive"]}
sp-core = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
sp-runtime = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27"}
[dev-dependencies]
pallet-balances = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27"}
pallet-collective = {path = "../collective", default-features = false, version = "0.1.0"}
sp-io = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}

[features]
default = ["std"]
std = [
  "sp-runtime/std",
  "codec/std",
  "scale-info/std",
  "num-traits/std",
  "frame-support/std",
  "proposal-types/std",
  "frame-system/std",
  "collective-types/std",
  "sp-std/std",
]
