[package]
edition = "2021"
name = "pallet-referendum"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
]}
frame-support = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
frame-system = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
num-traits = {version = "0.2.15", default-features = false}
pallet-math = {path = "../math", default-features = false}
proposal-types = {default-features = false, version = "0.1.0", path = "../system-types/proposal"}
scale-info = {version = "2.1.1", default-features = false, features = ["derive"]}
sp-runtime = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27"}
[dev-dependencies]
sp-core = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
sp-io = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "num-traits/std",
  "frame-support/std",
  "frame-system/std",
  "sp-std/std",
]
