[package]
edition = "2021"
name = "collective-types"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
]}
frame-support = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28"}
frame-system = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28"}
scale-info = {version = "2.1.1", default-features = false, features = ["derive"]}

sp-core = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28"}
sp-io = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28"}
sp-runtime = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28"}
sp-std = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28"}

[dev-dependencies]

[features]
default = ["std"]
std = [
  "codec/std",
  "sp-core/std",
  "scale-info/std",
  "frame-support/std",
  "sp-runtime/std",
  "scale-info/std",
  "frame-system/std",
  "sp-std/std",
  "sp-io/std",
]
